# rs-flow-demo

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: pr-checks.yml
docs/: SLIDING_WINDOW_PLAN.md  list_index_column_pruning.md  pipeline_eventtime.md  pipeline_plan_cache.md
docs/window/: README.md  countwindow.md  rfc_slidingwindow.md  slidingwindow.md  statewindow.md  tumblingwindow.md  watermarks.md
src/: main.rs  metrics.rs  server.rs
src/datatypes/src/: datatypes.rs  lib.rs  value.rs
src/datatypes/src/schema/: column_schema.rs  mod.rs  schema_struct.rs
src/datatypes/src/types/: boolean_type.rs  float64_type.rs  (+5 more)
src/datatypes/tests/: column_schema_test.rs
src/flow/: Cargo.toml
src/flow/src/: lib.rs  physical_plan_builder_index_test.rs  plan_cache.rs  row.rs  sql_conversion.rs  tuple.rs
src/flow/tests/: combined_access_test.rs  core_conversion_test.rs  create_pipeline_test.rs  end_to_end_projection_test.rs  eventtime_explain_test.rs  field_access_test.rs  filter_processor_test.rs  list_index_test.rs  mock_pipeline_test.rs  pipeline_test.rs  processor_pipeline_test.rs  shared_stream.rs  tuple_record_batch_test.rs
src/manager/: Cargo.toml
src/manager/src/: lib.rs  pipeline.rs  storage_bridge.rs  stream.rs
src/parser/src/: aggregate_registry.rs  aggregate_transformer.rs  aggregate_visitor.rs  dialect.rs  expression_extractor.rs  lib.rs  parser.rs  select_stmt.rs
src/parser/tests/: aggregate_transformation_test.rs  list_indexing_test.rs  stateful_transformation_test.rs
src/storage/src/: lib.rs
src/telemetry/src/: runtime.rs
(+90 files in other folders)
