[workspace]
members = [
    "src/flow",
    "src/datatypes",
    "src/parser",
]
resolver = "2"

[package]
name = "synapseFlow"
version = "0.1.0"
edition = "2021"

[dependencies]
parser = { path = "src/parser" }
flow = { path = "src/flow" }
datatypes = { path = "src/datatypes" }
sqlparser = { version = "0.40", features = ["serde", "visitor"] }

[[bin]]
name = "synapseFlow"
path = "src/main.rs"
