[package]
name = "manager"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
flow = { path = "../flow" }
once_cell = "1.19"

[lib]
path = "src/lib.rs"
